add ViewDialog demo

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion rootProject.ext.bcfg.ver.target_sdk
     buildToolsVersion rootProject.ext.bcfg.ver.build_tools
+
     defaultConfig {
         applicationId "com.idonans.example.backstack"
         minSdkVersion rootProject.ext.bcfg.ver.min_sdk
@@ -12,11 +13,17 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
