--- a/versions.gradle
+++ b/versions.gradle
@@ -54,6 +54,9 @@ bcfg.deps.fresco_anim_webp = "com.facebook.fresco:animated-webp:1.11.0"
 bcfg.deps.fresco_support_webp = "com.facebook.fresco:webpsupport:1.11.0"
 bcfg.deps.fresco_okhttp3 = "com.facebook.fresco:imagepipeline-okhttp3:1.11.0"
 
+bcfg.deps.idonans_appcontext = "com.idonans.appcontext:appcontext:0.1.4"
+bcfg.deps.idonans_lang = "com.idonans.lang:lang:0.1.4"
+
 bcfg.addRepos = this.&addRepos
 
 def addRepos(RepositoryHandler handler) {
