add LibLog, upgrade dependency

--- a/backstack/build.gradle
+++ b/backstack/build.gradle
@@ -7,8 +7,11 @@ android {
     defaultConfig {
         minSdkVersion rootProject.ext.bcfg.ver.min_sdk
         targetSdkVersion rootProject.ext.bcfg.ver.target_sdk
-        versionCode 1
-        versionName "1.0"
+        versionCode rootProject.ext.bcfg.ver.versionCode
+        versionName rootProject.ext.bcfg.ver.versionName
+        buildConfigField("String", "LIB_NAME", "\"Core\"")
+        buildConfigField("int", "LIB_VERSION_CODE", "$versionCode")
+        buildConfigField("String", "LIB_VERSION_NAME", "\"$versionName\"")
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -29,9 +32,7 @@ android {
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
     api rootProject.ext.bcfg.deps.androidx_appcompat
-    api rootProject.ext.bcfg.deps.guava
-    api rootProject.ext.bcfg.deps.timber
-    api rootProject.ext.bcfg.deps.rxbinding2
+    api rootProject.ext.bcfg.deps.rxbinding
     api rootProject.ext.bcfg.deps.idonans_lang
 }
 
