mv package, add maven publish

--- a/backstack/build.gradle
+++ b/backstack/build.gradle
@@ -9,7 +9,7 @@ android {
         targetSdkVersion rootProject.ext.bcfg.ver.target_sdk
         versionCode rootProject.ext.bcfg.ver.versionCode
         versionName rootProject.ext.bcfg.ver.versionName
-        buildConfigField("String", "LIB_NAME", "\"Core\"")
+        buildConfigField("String", "LIB_NAME", "\"Backstack\"")
         buildConfigField("int", "LIB_VERSION_CODE", "$versionCode")
         buildConfigField("String", "LIB_VERSION_NAME", "\"$versionName\"")
 
@@ -36,5 +36,4 @@ dependencies {
     api rootProject.ext.bcfg.deps.idonans_lang
 }
 
-// apply from: ('bintray.gradle')
-apply from: ('mavenLocal.gradle')
+apply from: rootProject.file('gradle-mvn-push.gradle')
